<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mobiapp.tishanskayaapp.UnwindActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/unwind.title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_null_unwind"
            android:textColor="@color/cardview_dark_background"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/unwind.text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/text_null_unwind"
            android:visibility="visible" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp">

            <ImageView
                android:id="@+id/select_action.image"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="false"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/photo_psiholog"
                android:visibility="gone" />

            <com.example.mobiapp.tishanskayaapp.view.ScratchView
                android:id="@+id/select_action.scratch_view"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="false"
                android:layout_gravity="center_horizontal"
                android:visibility="gone" />
        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/unwind.button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp"
        android:background="@drawable/btn_auth"
        android:text="@string/next"
        android:textColor="@color/white" />


</android.support.design.widget.CoordinatorLayout>
