<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.mobiapp.tishanskayaapp.MainActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:visibility="visible"
        app:srcCompat="@drawable/everest" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="@color/white"
        android:visibility="gone"
        app:elevation="0dp"
        app:menu="@menu/navigation" />

    <com.daimajia.slider.library.SliderLayout
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="-30dp"
        android:layout_marginTop="56dp"
        android:visibility="visible" />

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="56dp"
        android:layout_marginTop="56dp"
        android:layout_weight="1"
        android:visibility="gone">
    </FrameLayout>

    <RelativeLayout
        android:id="@+id/relIndicatorSlider"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:alpha="0.5"
        android:background="@android:color/transparent"
        android:visibility="visible">
            <RelativeLayout
                android:id="@+id/relPreView"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    app:srcCompat="@drawable/ic_chevron_left_black_24dp" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/pre"
                    android:textColor="@android:color/background_light"
                    android:textSize="16sp" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/relNext"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dp"
                    app:srcCompat="@drawable/ic_chevron_right_black_24dp" />

                <TextView
                    android:id="@+id/textViewNext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/next"
                    android:textColor="@android:color/background_light"
                    android:textSize="16sp" />
            </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="120dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="13dp"
                android:layout_height="13dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/circle_tv" />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="13dp"
                android:layout_height="13dp"
                android:layout_alignBaseline="@+id/textView3"
                android:layout_alignBottom="@+id/textView3"
                android:layout_marginRight="8dp"
                android:layout_toLeftOf="@+id/textView3"
                android:layout_toStartOf="@+id/textView3"
                android:background="@drawable/circle_tv_active" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="13dp"
                android:layout_height="13dp"
                android:layout_alignBaseline="@+id/textView3"
                android:layout_alignBottom="@+id/textView3"
                android:layout_marginLeft="8dp"
                android:layout_toEndOf="@+id/textView3"
                android:layout_toRightOf="@+id/textView3"
                android:background="@drawable/circle_tv" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="13dp"
                android:layout_height="13dp"
                android:layout_alignBaseline="@+id/textView31"
                android:layout_alignBottom="@+id/textView31"
                android:layout_marginLeft="8dp"
                android:layout_toEndOf="@+id/textView31"
                android:layout_toRightOf="@+id/textView31"
                android:background="@drawable/circle_tv" />


        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relToolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/toolbar.text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/bar_text"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:background="@color/one_gradient"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:paddingBottom="8dp">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="4dp"
                        app:srcCompat="@mipmap/ic_launcher_courses" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="4dp"
                        android:text="онлаин-курсы"
                        android:textColor="@color/cardview_light_background"
                        android:textSize="10sp" />
                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true">

                    <ImageView
                        android:id="@+id/imageView54"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="4dp"
                        android:scaleX="1.3"
                        android:scaleY="1.3"
                        app:srcCompat="@mipmap/ic_launcher_list" />

                    <TextView
                        android:id="@+id/textView42"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="4dp"
                        android:scaleX="1.2"
                        android:scaleY="1.2"
                        android:text="болезни"
                        android:textColor="@color/cardview_light_background"
                        android:textSize="10sp" />
                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:paddingBottom="8dp">

                    <ImageView
                        android:id="@+id/more.imageView.about"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="4dp"
                        app:srcCompat="@mipmap/ic_launcher_about" />

                    <TextView
                        android:id="@+id/more.text.about"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:text="обо мне"
                        android:textColor="@color/cardview_light_background"
                        android:textSize="10sp" />
                </RelativeLayout>


            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
